package com.thewhite.blank.api.skill.dto;

import lombok.*;

import java.util.UUID;


/**
 * Generated by Thanos
 */
@Getter
@Setter
@Builder
@AllArgsConstructor
@NoArgsConstructor
public class SkillDto {

    UUID id;

    String name;

}